--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     data-bs-smooth-scroll="true" class="scrollspy-example bg-body-tertiary p-3 rounded-2" tabindex="0">
     <div class="container text-center p-5 mt-5 mb-5" id="scrollspyHeading1">
       <p>
-        Hello everyone! My name is Christeena Daniel. I am from Pathanamthitta.
+        Hello everyone! My name is Christeena Daniel.Currently doing <b>MSc. Computing with Professional Placement Full-time </b>at Edinburgh Napier University.
         I am keen on constantly updating my knowledge of the software development field and the latest technologies, 
         and I am looking forward to keeping up with the latest trends in the industry.
         I believe my knowledge and enthusiasm can help in the successful completion of projects. 
@@ -84,6 +84,12 @@
               <div class="carousel-item">
                 <img src="./images/git.png" class="d-block w-100" alt="..." height="400">
               </div>
+              <div class="carousel-item">
+                <img src="./images/mysql.png" class="d-block w-100" alt="..." height="400">
+              </div>
+              <div class="carousel-item">
+                <img src="./images/php.png" class="d-block w-100" alt="..." height="400">
+              </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#scrollspyHeading2"
               data-bs-slide="prev">
@@ -105,6 +111,8 @@
             <p><strong>Bootstrap is a free and open-source CSS framework directed at responsive, mobile-first front-end
                 web development. </strong></p>
             <p><strong>Git is a DevOps tool used for source code management. </strong></p>
+            <p><strong>MySQL is an open-source relational database management system.</strong></p>
+            <p><strong>Php is a popular general-purpose scripting language that is especially suited to web development.</strong></p>
 
           </div>
         </div>
@@ -120,10 +128,24 @@
           <h2 class="accordion-header">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
               aria-expanded="true" aria-controls="collapseOne">
-              MCA
+              Msc.Computing with Professional Placement Full-time
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <h6>Currently doing <strong>Msc.Computing with Professional Placement Full-time </strong>from Edinburgh Napier University </h6>
+            </div>
+          </div>
+        </div>
+
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              MCA
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
               <h6>I did my Post Graduation <strong>Master of Computer Application </strong>from University of kerala in
                 the year 2015 with total 69.75%marks.</h6>
@@ -133,11 +155,11 @@
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
               BSC CS
             </button>
           </h2>
-          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+          <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
               <h6>l completed my graduation in <strong>Computer Science </strong>
                 from university of kerala with 73.44%marks in2012.</h6>
@@ -147,11 +169,11 @@
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
               +2
             </button>
           </h2>
-          <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+          <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
               <h6>I completed my <strong>Higher Secondary </strong>
                 education from St.Marys M M G H S S Adoor with 71.33% aggregate in the year 2009</h6>
@@ -161,11 +183,11 @@
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+              data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
               SSLC
             </button>
           </h2>
-          <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+          <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <h6 class="accordion-body">
               <h6>I Completed my <strong>10th Grade </strong>from St.Marys M M G H S Adoor with 75% marks in the year
                 2007 </h6I>
@@ -178,7 +200,30 @@
     <div class="row container w-100 m-5 p-4 text-center" id="scrollspyHeading4">
       <h4 class="fs-2 our mb-5 text-center">WORK EXPERIENCE
       </h4>
-      <div class="col-lg-6 col-md-12 ">
+      <div class="col-lg-6 col-md-12 p-2">
+        <div class="card ms-1 " style="width: 28rem; border: none;">
+          <img width="100%" src="./images/image1.jpeg" class="card-img-top" alt="..." height="250px">
+          <div class="card-body">
+            <h5 class="card-title ">
+              System Administrator</a>
+            </h5>
+            <p></p>
+            <p class="card-text">I joined Royal Engineering Enterprises as a System Administrator 
+              from 2018 to 2022. </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-12 p-2">
+        <div class="card ms-1 " style="width: 28rem; border: none;">
+          <img width="100%" src="./images/java2.jpeg" class="card-img-top" alt="..." height="250px">
+          <div class="card-body">
+            <h5 class="card-title colour1">Software Developer Trainee</h5>
+            <p class="card-text">I joined Cloud Dimension Technology Pvt. Ltd as a Junior Software Developer in
+              2017 for 1 year.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-12 p-2">
         <div class="card ms-1 " style="width: 28rem; border: none;">
           <img width="100%" src="./images/java.jpeg" class="card-img-top" alt="..." height="250px">
           <div class="card-body">
@@ -191,7 +236,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-6 col-md-12">
+      <!-- <div class="col-lg-6 col-md-12 p-2">
         <div class="card me-5" style="width: 28rem; border: none;">
           <img width="100%" src="./images/java2.jpeg" class="card-img-top" alt="..." height="250px">
           <div class="card-body">
@@ -201,7 +246,7 @@
 
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
     <!-- -----------------------------------contact----------------------------------------- -->
     <div id="scrollspyHeading5" width="100%" class="contact">
@@ -216,19 +261,19 @@
             </div>
             <div class="col-11">
               <p></p>
-              <p>Pathanamthitta</p>
+              <p>Edinburgh</p>
             </div>
             <div class="col-1">
               <i class="fa-solid fa-phone-volume"></i>
             </div>
             <div class="col-11">
-              <p> +91 9645237951</p>
+              <p> +44 7747870381</p>
             </div>
             <div class="col-1">
               <i class="fa-sharp fa-solid fa-envelope"></i>
             </div>
             <div class="col-11">
-              <p>christydaniel168@gmail.com</p>
+              <p>christy06.daniel@gmail.com</p>
             </div>
 
           </div>
